noinst_LTLIBRARIES = libwaoladi_s.la

libwaoladi_s_la_SOURCES = \
include/waoladi.h \
\
pch.c \
pch.h \
pch_u.h \
waoladi.c \
waoladi.h \
waoladi_fact4s.c \
waoladi_fact4s.h \
waoladi_factory.c \
wdiscoverer_host.c \
wdiscoverer_host.h \
wdiscoverer_host_factory.c \
wdiscoverer_host_priv.h \
wdiscoverer_host_u.c \
wdiscoverer_iface.c \
wdiscoverer_iface.h \
wdiscoverer_iface_factory.c \
wdiscoverer_net.h \
wdiscoverer_iface.h \
wdiscoverer_iface_monitor.c \
wdiscoverer_iface_monitor.h \
wdiscoverer_iface_monitor_factory.c \
wdiscoverer_iface_platform.h \
wdiscoverer_iface_priv.h \
wdiscoverer_iface_priv_u.h \
wdiscoverer_iface_u.c \
wdiscoverer_net.c \
wdiscoverer_net.h \
wdiscoverer_net_factory.c \
wdiscoverer_net_priv.h

AM_CFLAGS = -I../../libwlog/include \
-I../../libwaolash/include -I../../waolash/include \
-I../../libwaolath/include -I../../libwaolane/include \
-I../../libwaolava/include -I../../libwaolavad/include \
-I../../libwaolast/include -I../../libwaolare/include
