noinst_LTLIBRARIES = libwaolane_s.la

libwaolane_s_la_SOURCES = \
include/arp_cache_entry.h \
include/waolane.h \
include/warper.h \
include/warper_cb_data.h \
include/wnet_iface.h \
include/wnet_iface_prov.h \
\
pch.c \
pch.h \
pch_l.h \
pch_u.h \
waolane_fact4s.c \
waolane_fact4s.h \
warper.h \
warper_l.c \
warper_priv.h \
warper_u.c \
warper_u.h \
wnet_iface.c \
wnet_iface.h \
wnet_iface_factory.c \
wnet_iface_prov.c \
wnet_iface_prov.h \
wnet_iface_prov_factory.c \
wnet_iface_prov_l.c \
wnet_iface_prov_u.c \
wnet_iface_prov_u.h \
wnet_iface_prov_u_priv.h \
wnet_iface_u.c

AM_CFLAGS = -I../../libwlog/include \
-I../../waolash/include -I../../libwaolash/include \
-I../../libwaolath/include
