noinst_LTLIBRARIES = libwaolare_s.la

libwaolare_s_la_SOURCES = \
include/waolare.h \
include/wresolver_hostname.h \
include/wresolver_hosts.h \
\
pch.c \
pch.h \
pch_u.h \
waolare.c \
waolare.h \
waolare_fact4s.c \
waolare_fact4s.h \
waolare_factory.c \
wresolver_host.c \
wresolver_host.h \
wresolver_host_factory.c \
wresolver_host_priv.h \
wresolver_host_u.c \
wresolver_hostname.c \
wresolver_hosts.c \
wresolver_hosts.h \
wresolver_hosts_factory.c \
wresolver_hosts_priv.h \
wresolver_hosts_u.c \
wresolver_sockaddr_resolve.c \
wresolver_sockaddr_resolve.h

AM_CFLAGS = -I../../libwlog/include \
-I../../libwaolash/include -I../../waolash/include \
-I../../libwaolath/include -I../../libwaolane/include \
-I../../libwaolava/include -I../../libwaolavad/include \
-I../../libwaolast/include

