noinst_LTLIBRARIES = libwaolash_s.la

libwaolash_s_la_SOURCES = \
include/libwaolash.h \
include/wcont4r_s.h \
include/whost_view_s.h \
include/whost_data_s.h \
include/whost_s.h \
include/wlist_s.h \
include/wmac_addr_s.h \
include/wmax.h \
include/wmem_s.h \
include/wmin.h \
include/wsockaddr_s.h \
include/wstr_s.h \
include/wstr_u.h \
\
pch.c \
pch.h \
pch_u.h \
waolash.c \
waolash_u.c \
wcont4r.c \
wcont4r_factory.c \
wcont_list_factory.c \
whost.c \
whost.h \
whost_data.c \
whost_data.h \
whost_factory.c \
whost_priv.h \
whost_view.c \
whost_view.h \
whost_view_factory.c \
wlist.c \
wmac_addr.c \
wmac_addr.h \
wmax.c \
wmem_u.c \
wmin.c \
wsockaddr.c \
wstr.c \
wstr_u.c

AM_CFLAGS = -I../../libwlog/include -I../../waolash/include
