noinst_LTLIBRARIES = libwaolast_s.la

libwaolast_s_la_SOURCES = \
pch.c \
pch_u.h \
pch.h \
waolast.c \
waolast.h \
waolast_factory.c \
waolast_priv.h

pkginclude_HEADERS = \
include/waolast.h

AM_CFLAGS = -I../../libwlog/include \
-I../../libwaolash/include -I../../waolash/include \
-I../../libwaolath/include -I../../libwaoladi/include \
-I../../libwaolare/include \
-I../../libwaolasc/include -I../../waolasc/include
