noinst_LTLIBRARIES = libwaolath_s.la

libwaolath_s_la_SOURCES = \
include/waolath.h \
include/wevent.h \
include/wmutex.h \
include/wthread.h \
include/wthread_cbi.h \
include/wthread_counter.h \
\
pch.c \
pch_u.c \
pch_u.h \
pch.h \
wevent_factory.c \
wmutex_factory.c \
wcond.h \
wevent.c \
wevent.h \
wevent_u.c \
wmutex.c \
wmutex_l.c \
wmutex_u.c \
wthread.c \
wthread.h \
wthread_cbi.c \
wthread_cbi_factory.c \
wthread_counter.c \
wthread_counter_factory.c \
wthread_counter_max.c \
wthread_counter_max.h \
wthread_factory.c \
wthread_u.c \
wthread_u.h

AM_CFLAGS = -I../../libwlog/include -I../../libwaolash/include -I../../waolash/include
