noinst_LTLIBRARIES = libwaolava_s.la
libwaolava_s_la_SOURCES = \
pch.c \
pch.h \
pch_u.h \
sysexits.h \
waolava.c \
waolava.h \
waolava_factory.c \
waolava_merge_host_cbi_factory.c \
waolava_on_host_modified_cbi_factory.c \
fact4s.c \
fact4s.h \
waolava_priv.h

pkginclude_HEADERS = \
include/waolava_merge_host_cbi.h \
include/waolava_on_host_modified_cbi.h \
include/waolava.h

AM_CFLAGS = -I../../libwlog/include \
-I../../libwaolash/include -I../../waolash/include \
-I../../libwaolath/include -I../../libwaolavad/include
